--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,13 @@
   <button class="btn-add" onclick="showForm()">➕ Add voiture</button>
 <button onclick="showAll()">Toutes</button>
 <button onclick="showAvailable()">Disponibles</button>
+<input
+  type="text"
+  id="searchInput"
+  placeholder="🔍 Search by brand or model"
+  onkeyup="searchVoiture()"
+  style="padding:8px; width:250px; margin-left:10px;"
+/>
 
   <!-- voitureS TABLE -->
   <table>
